force-app/main/default/objects/Account/fields/Electronic_Auto_ACH_Debit__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Auto_ACH_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic – Auto ACH Debit</label>
    <type>Checkbox</type>
</CustomField>