force-app/main/default/objects/Account/fields/Electronic_Payment__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if it&apos;s an ACH vendor.</description>
    <label>Electronic Payment</label>
    <type>Checkbox</type>
</CustomField>