force-app/main/default/objects/Account/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <formula>Owner.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Company</label>
    <type>Text</type>
</CustomField>