force-app/main/default/objects/Account/fields/Payment_and_Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_and_Accounting_Notes__c</fullName>
    <label>Payment and Accounting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>