force-app/main/default/objects/Account/fields/Tax_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Tax_Schedule__c</fullName>
    <label>Tax Schedule</label>
    <length>20</length>
    <type>Text</type>
</CustomField>